# agent-browser

./: .gitignore  Cargo.toml  README.md  SKILL.md
src/: client.rs  commands.rs  daemon.rs  main.rs  mcp.rs  protocol.rs  selector.rs
