[package]
name = "agent-browser"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Persistent headless browser session for AI agents (chromiumoxide-backed)"
license = "MIT"

[[bin]]
name = "agent-browser"
path = "src/main.rs"

[dependencies]
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
futures = "0.3"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[profile.release]
opt-level = 2
lto = false
